ARROW-3765: [Gandiva] Segfault when the validity bitmap has not been allocated

https://issues.apache.org/jira/browse/ARROW-3765

Author: suquark <suquark@gmail.com>

Closes #2967 from suquark/gandiva and squashes the following commits:

6d09068d0 <suquark> lint
4b3ea9d32 <suquark> lint
76b7e7f1e <suquark> fix bug
efff64a4c <suquark> combine tests to reduce build time
5e4dda518 <suquark> lint
b509b0573 <suquark> rename test
4e2528bdb <suquark> lint
bdf08f9ff <suquark> fix bugs & add new tests
de2061330 <suquark> Gandiva null validity buffer support.